Atualizacao Final Projeto 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div> <!--caixa-buscar-->
             
             <div class="botaoEntrar">
-                    <button>Entrar</button>
+                    <button class="btnEntrar">Entrar</button>
             </div> <!--div botaoEntrar-->
         </header> <!--fim header-->
         <div class="modal-container">
